# tuipod

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  subscriptions.opml  test_tuipod.py  tuipod.bat  tuipod.py  tuipod.sh
.github/workflows/: python-app.yml
tests/: test_tuipod.py
tuipod/: __main__.py
tuipod/models/: episode.py  player.py  podcast.py  search.py  subscription_list.py
tuipod/ui/: about_info.py  episode_info.py  episode_list.py  error_info.py  podcast_app.py  podcast_list.py  podcast_player.py  search_input.py
