[project]
name = "tuipod"
version = "2024-11-24.6147baed9d02462989c1d8cc65b87af5-beta"
description = "A TUI podcast player."
requires-python = ">=3.12"
readme = "README.md"
license = "MIT"
keywords = [
    "console",
    "player",
    "podcast",
    "terminal",
    "textual",
    "tui"
]
authors = [
    { name = "Matthew Hickson" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Players"
]
dependencies = [
    "beautifulsoup4>=4.12.3",
    "miniaudio>=1.61",
    #"playsound3>=2.4.0",
    "pynput>=1.7.7",
    "textual>=0.85.2"
]

[project.urls]
Documentation = "https://github.com/mwhickson/tuipod#readme"
Issues = "https://github.com/mwhickson/tuipod/issues"
Source = "https://github.com/mwhickson/tuipod"
